Revision history for Perl module Spreadsheet::ParseExcel.

0.58 Xxxxx XX 2010

    ! Fix for currency locales in format strings.
      Reported by wjaguar.
      http://rt.cpan.org/Public/Bug/Display.html?id=60547

    ! Fix for incomplete SETUP records.
      Reported by M.C. Deurloo.


0.57 January 24 2010

    ! Added fix for reading formatted data from Excel 4 files.

    ! Added example programs, a_simple_parser.pl and
      display_text_table.pl.

    ! Removed Build.PL from README. Thanks Ed Avis.
      https://rt.cpan.org/Ticket/Display.html?id=52670


0.56 November 9 2009

    + Added error() and error_code() error handling routines.
      This allows encrypted files to be ignored.
      Added t/10_error_codes.t for the above methods.
      http://rt.cpan.org/Public/Bug/Display.html?id=51033
      http://rt.cpan.org/Public/Bug/Display.html?id=47978

    ! Made version 0.19 of OLE::Storage_Lite a prerequisite to avoid
      issues when writing OLE header in SaveParser.

    ! Changed Parse() method name to parse() for consistency with the
      rest of the API. The older method name is still supported but
      not documented.


0.55 August 25 2009

    + Refactored Cell.pm documentation and method names and added
      regression suite, t/06_regression.t.

    ! Added float comparison test to avoid false failing tests on
      64bit systems.


0.54 August 25 2009

    ! Fix for height/width of hidden rows/columns with additional.
      tests in 05_regression.t. Thanks to Greger Leijonhufvud.
      http://rt.cpan.org/Public/Bug/Display.html?id=48450

    ! Fix for mal-formed Print_Title Name block.
      Reported by Marc Elser.

0.53 August 24 2009

    + Made perl 5.8.0 a requirement for proper Unicode handling.

    ! Fixed minor int2col() bug thanks to David Black.
      Added 28_int2col.t test for above.
      http://rt.cpan.org/Public/Bug/Display.html?id=48967

    + Refactored Workbook API and docs.

0.52 August 21 2009
